Create Housing Price prediction.ipynb

--- a/Task1/Housing Price prediction.ipynb
+++ b/Task1/Housing Price prediction.ipynb
@@ -38,16 +38,7 @@
         "id": "uDIh3qbmZgx0"
       },
       "source": [
-        "#**Name : Aditya Vijay Nikhate**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KOZiHnrRZu3m"
-      },
-      "source": [
-        "#**Email : nikhateaditya123@gmail.com**"
+        "#*Name : Vetrivel D**"
       ]
     },
     {
@@ -62,19 +53,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ULvf072BZ4Y5"
-      },
-      "source": [
-        "#**@Infopillar Solution**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "oM_4hZMiZ9DG"
       },
       "source": [
-        "#**Role : Machine Learning Intern**"
+        "#**Role : Machine Learning Intern at Info Pillar Solution**"
       ]
     },
     {
@@ -84,15 +66,9 @@
       },
       "source": [
         "##**Content :**\n",
-        "1. Importing the libraries\n",
-        "2. Importing the Boston Housing dataset\n",
-        "3. Initializing the dataframe\n",
-        "4. Head of the Dataset\n",
-        "5. Adding the feature names to the dataframe\n",
-        "6. Adding target variable to dataframe\n",
-        "7. Shape of dataframe\n",
-        "8. Datatypes\n",
-        "9. Check for missing values\n",
+        "1. Importing the libraries and Boston Housing dataset\n",
+        "2. Dataframe initializing\n",
+        "3. ",
         "10. Describe the Data\n",
         "11. Coorelation\n",
         "12. Heatmap\n",
