Update Housing Pricing Prediction.ipynb

--- a/Task4/Housing Pricing Prediction.ipynb
+++ b/Task4/Housing Pricing Prediction.ipynb
@@ -909,9 +909,8 @@
       },
       "source": [
         "#**Conclusion :**\n",
-        "* Random Forest regressor is works best for this dataset\n",
-        "* R2 Score is 97% Accurate on this Dataset\n",
-        "* Adjusted R2 Score is 97% Accurate on this Dataset:"
+        "* RandomForestregressor is Perfectly suit for this dataset to predict the value\n",
+        "* R-square value for this prediction using regression is 97% on this Dataset\n",
       ]
     },
     {
