Update Housing Pricing Prediction.ipynb

--- a/Task4/Housing Pricing Prediction.ipynb
+++ b/Task4/Housing Pricing Prediction.ipynb
@@ -50,7 +50,7 @@
         "\n",
         "\n",
         "*   Importing the libraries and import database\n",
-        "*   INitialize DataFrame\n",
+        "*   Initialize DataFrame\n",
         "\n",
         "*   Adding Feature Name to the DataFrame\n",
         "*   Declare Target Variable\n",
