--- a/Task_1/IPSVIP_LOAN_PREDICTION_TASK_1.ipynb
+++ b/Task_1/IPSVIP_LOAN_PREDICTION_TASK_1.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "## **IPS Virtual Remote Internship**\n",
         "\n",
-        "## Task :- Housing Pricing Prediction using ML\n",
+        "## Task :-  IPSVIP Loan Prediction using ML\n",
         "\n",
         "### Dataset: http://lib.stat.cmu.edu/datasets/boston\n",
         "\n",
